# stream-tracker

./: .env  .gitignore  README.md  docker-compose.yml  playground.mongodb  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: main_streamtrackerapi.yml  master_streamtrackerapi.yml
src/: local.env  main.py  requirements.txt
src/api/: utils.py
src/api/models/: channel.py  settings.py
src/api/routers/: channel_router.py  status_router.py
src/api/services/: channels_service.py
src/background/: channel.py  local-example.env  local.env  main.py
src/data/: mongo_data.py
src/models/: settings.py
src/routers/: channel_router.py
src/services/: logging.py
tests/: test_main.py
tests/routers/: test_channel_router.py
